--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    '"node": 10.14.'
+    "node": "10.14.1"
   },
   "keywords": [],
   "author": "",
